--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,6 +4,7 @@
 
 湖南省纪委监委官方10月29日通报，湖南长沙市常务副市长陈泽珲因私自购买、携带“有严重政治问题”的境外书刊阅读私藏，现已被开除党籍公职，取消待遇。通报还称，陈泽珲违规收受礼金，涉嫌受贿等犯罪已被立案审查。.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 4:16 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1" target="_blank">确保选举可信 川普在两州提告 要一州重计票</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1282737617-150x120.jpg" align ="left"></a>美国2020年总统选举中尚未出现获胜者的情况下，总统川普（特朗普）竞选团队要求在威斯康星州重新计票，并提起诉讼以暂停密歇根州和宾州的延期计票工作，直到共和党观察员能进入设施监督点票。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 3:36 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/14/n12475476.md#1" target="_blank">【名家专栏】选民欺诈 谁在策划美国选举风暴</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/14/n12475476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1058239650-web-1200x716-150x120.jpg" align ="left"></a>我们似乎看到的是一个由民主党议员、律师、活动家团体和他们的亿万富翁捐赠者组成的网络在协调努力，以成千上万甚至可能是数百万张非法选票来窃取选举。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 3:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524856.md#1" target="_blank">【独家】内部文件解密美国在华“和平队”</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524856.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-150x120.jpg" align ="left"></a>美中关系恶化，曾于中国大陆运作27年的美国“和平队”（Peace Corps），在今年初宣布终止。近日，大纪元获得多个大陆高校的内部文件显示，部分成员已提前回了美国。而这些成员在中国大陆的时候，行为都受到中共的限制。恶化，曾于中国大陆运作27年的美国“和平队”（Peace Corps），在今年初宣布终止。近日，大纪元获得多个大陆高校的内部文件显示，部分成员已.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 3:01 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526087.md#1" target="_blank">拜登一夜离奇“翻盘” 川普猛批计票舞弊</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526087.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283816258-150x120.jpg" align ="left"></a>美国总统大选星期三（11月4日）进一步陷入僵局，民主党候选人拜登在关键的密歇根和威斯康辛州的官方票数当天反超川普，并在当天稍晚被媒体宣布是这两州胜者。不过川普阵营对此结果提出强烈质疑，并在这多州采取多项法律行动，以遏制可能的计票舞弊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 12:59 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1" target="_blank">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/50e3caa58e60cbf457ec145091d24dbc-150x120.jpg" align ="left"></a>很高兴和你交谈。我要向《大纪元时报》致敬。它确实做了一些最前沿的工作，揭露共产中国，对世界造成的致命的病毒感染。（中共病毒）时间线，你们都已经建立起来了，报道完全正确，让世界看到这一点，这是非常重要的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月05日 11:21 AM							</td></tr>
@@ -41,6 +42,5 @@
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522033.md#1" target="_blank">维也纳爆IS恐袭 枪手被击毙 华人一死一伤</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522033.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229424057-150x120.jpg" align ="left"></a>奥地利维也纳发生重大枪击案，造成至少4人死亡、十几人受伤。奥地利内政部长内汉默说，遭警方击毙的一名凶嫌是极端组织伊斯兰国（IS）的支持者。事情还未调查清楚，维也纳学校星期二关闭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:44 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521364.md#1" target="_blank">【西岸观察】大选前川普出书 警示中共意味浓</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521364.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/1102-west-Cover02-150x120.jpg" align ="left"></a>川普能否获得连任，还是拜登入主白宫，11月3号过后就会有一个清晰的结果。今天川普一连5场造势集会，马不停蹄，为大选做最后的冲刺。他今天还有两个大动作，一个对内，一个对外，都值得关注。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 3:13 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520383.md#1" target="_blank">美10月制造业指数劲扬 创2年来最高</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520383.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1151712654-150x120.jpg" align ="left"></a>美国供应管理协会（ISM）周一（2日）公布总统大选前最后一份重要经济数据“10月制造业采购经理人指数”（PMI），显示制造业在十月强劲增长，达到两年来的最高水平。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 3:00 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521306.md#1" target="_blank">川普大选前夕签行政令 推动爱国教育</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521306.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228998438-150x120.jpg" align ="left"></a>就在大选前一天，美国总统川普签署一道行政命令，成立联邦1776委员会，推动“爱国教育”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 12:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
